--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,11 +11,13 @@
         android:id="@+id/toolbar"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="40dp"
         android:background="#0000"
         android:elevation="4dp"
         android:minHeight="?attr/actionBarSize"
         android:paddingTop="@dimen/tool_bar_top_padding"
         android:transitionName="actionBar"
+        app:layout_constraintBottom_toTopOf="@+id/textMain"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -25,11 +27,12 @@
         android:id="@+id/distance"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="84dp"
-        android:layout_marginEnd="55dp"
+        android:layout_marginEnd="49dp"
+        android:layout_marginBottom="35dp"
         android:text="0.00"
         android:textColor="#FFFFFF"
         android:textSize="24sp"
+        app:layout_constraintBottom_toTopOf="@+id/scrollView4"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/action_bar_spinner" />
 
@@ -41,56 +44,22 @@
         android:textColor="#FFFFFF"
         android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/action_bar_spinner"
-        app:layout_constraintEnd_toEndOf="@+id/action_bar_spinner" />
-
-    <Spinner
-        android:id="@+id/action_bar_spinner"
-        style="@android:style/Widget.Material.Spinner.Underlined"
-        android:layout_width="197dp"
-        android:layout_height="96dp"
-        android:layout_marginTop="72dp"
-        android:layout_marginBottom="74dp"
-        android:entries="@array/interval"
-        android:textAlignment="center"
-        app:layout_constraintBottom_toTopOf="@+id/headlineDate"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbar" />
 
-    <TextView
-        android:id="@+id/headlineDate"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="19dp"
-        android:layout_marginBottom="11dp"
-        android:text="Дата"
-        android:textColor="#FFFFFF"
-        android:textSize="18sp"
-        app:layout_constraintBottom_toTopOf="@+id/textRes"
-        app:layout_constraintEnd_toEndOf="@+id/textRes" />
-
-    <TextView
-        android:id="@+id/textRes"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="333dp"
-        android:text="Результат"
-        android:textColor="#FFFFFF"
-        android:textSize="18sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="33dp"
-        android:layout_marginTop="29dp"
-        android:onClick="onClick"
-        android:text="Button"
-        app:layout_constraintStart_toStartOf="@+id/scrollView4"
-        app:layout_constraintTop_toBottomOf="@+id/textRes" />
+    <Spinner
+        android:id="@+id/action_bar_spinner"
+        style="@android:style/Widget.Material.Spinner.Underlined"
+        android:layout_width="193dp"
+        android:layout_height="59dp"
+        android:layout_marginBottom="35dp"
+        android:entries="@array/interval"
+        android:textAlignment="center"
+        app:layout_constraintBottom_toTopOf="@+id/distance"
+        app:layout_constraintEnd_toEndOf="@+id/textMain"
+        app:layout_constraintStart_toStartOf="@+id/textMain"
+        app:layout_constraintTop_toBottomOf="@+id/textMain" />
 
     <ScrollView
         android:id="@+id/scrollView4"
@@ -101,52 +70,44 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button">
+        app:layout_constraintTop_toBottomOf="@+id/distance">
 
-            <TableLayout
-                android:id="@+id/tableresult"
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
-                android:layout_marginBottom="8dp"
-                android:scrollbarSize="4dp"
-                android:scrollbars="horizontal"
+        <TableLayout
+            android:id="@+id/tableresult"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:layout_marginBottom="8dp"
+            android:scrollbarSize="4dp"
+            android:scrollbars="horizontal"
 
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/toolbar">
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/toolbar">
 
-                <TableRow
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
-                    <TextView
-                        android:id="@+id/date"
-                        android:layout_margin="1dip"
-                        android:layout_weight="1"
-                        android:gravity="center_horizontal"
-                        android:text="Дата"
-                        android:textAppearance="?android:attr/textAppearanceMedium" />
+                <TextView
+                    android:id="@+id/date"
+                    android:layout_margin="1dip"
+                    android:layout_weight="1"
+                    android:gravity="center_horizontal"
+                    android:text="Дата"
+                    android:textAppearance="?android:attr/textAppearanceMedium" />
 
-                    <TextView
-                        android:id="@+id/kilo"
-                        android:layout_margin="1dip"
-                        android:layout_weight="1"
-                        android:gravity="center_horizontal"
-                        android:text="Километры"
-                        android:textAppearance="?android:attr/textAppearanceMedium" />
+                <TextView
+                    android:id="@+id/kilo"
+                    android:layout_margin="1dip"
+                    android:layout_weight="1"
+                    android:gravity="center_horizontal"
+                    android:text="Километры"
+                    android:textAppearance="?android:attr/textAppearanceMedium" />
 
-                    <TextView
-                        android:id="@+id/work"
-                        android:layout_margin="1dip"
-                        android:layout_weight="1"
-                        android:gravity="center_horizontal"
-                        android:text="Вид работы"
-                        android:textAppearance="?android:attr/textAppearanceMedium" />
+            </TableRow>
 
-                </TableRow>
-
-            </TableLayout>
+        </TableLayout>
     </ScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
