--- a/app/src/main/res/layout/tableforsettings.xml
+++ b/app/src/main/res/layout/tableforsettings.xml
@@ -15,4 +15,11 @@
         android:layout_weight="1"
         android:gravity="center_horizontal"
         android:text="" />
+
+    <TextView
+        android:id="@+id/col4"
+        android:layout_margin="1dip"
+        android:layout_weight="1"
+        android:gravity="center_horizontal"
+        android:text="" />
 </TableRow>
