--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -66,6 +66,8 @@
             android:layout_marginBottom="8dp"
             android:scrollbarSize="4dp"
             android:scrollbars="horizontal"
+            android:divider="?android:dividerHorizontal"
+            android:showDividers="middle"
 
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -82,6 +84,7 @@
                     android:layout_weight="1"
                     android:gravity="center_horizontal"
                     android:text="Дата"
+                    android:textStyle = "bold|italic"
                     android:textAppearance="?android:attr/textAppearanceMedium" />
 
                 <TextView
