--- a/app/src/main/res/layout/custom_dialog.xml
+++ b/app/src/main/res/layout/custom_dialog.xml
@@ -10,6 +10,7 @@
         android:id="@+id/typeOfWorklogin"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:hint="Название работы"
         app:errorEnabled="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -19,7 +20,6 @@
             android:id="@+id/typeOfWork"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Вид работы"
             android:inputType="textCapCharacters"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -31,16 +31,16 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="64dp"
+        android:hint="Нужно проехать километров"
         app:errorEnabled="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="@+id/typeOfWorklogin">
 
         <EditText
             android:id="@+id/kilometrs"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Кол-во километров"
             android:inputType="number"
             tools:layout_editor_absoluteX="119dp"
             tools:layout_editor_absoluteY="94dp" />
@@ -52,6 +52,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
+        android:hint="Дата начала отслеживания"
         app:errorEnabled="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -63,11 +64,9 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="0dp"
             android:layout_marginTop="12dp"
-            android:contentDescription="Дата начала отсчёта"
             android:ems="10"
             android:hint="ддммгггг"
             android:inputType="date"
-            android:onClick="inClick"
             android:textColor="#FFFFFF"
             app:keep_hint="false"
             app:layout_constraintStart_toStartOf="parent"
